feat: add delete org/env commands